2011-04-23  Ivan Maidanski  <ivmai@mail.ru>

	* include/private/gc_locks.h (WIN32_LEAN_AND_MEAN, NOSERVICE):
	Define before including windows.h.
	* include/private/gc_priv.h (WIN32_LEAN_AND_MEAN, NOSERVICE):
	Ditto.
	* include/private/thread_local_alloc.h (WIN32_LEAN_AND_MEAN,
	NOSERVICE): Ditto.
	* include/private/gc_priv.h (CLOCKS_PER_SEC): Reformat the
	comment.
	* include/private/gc_priv.h (MS_TIME_DIFF): Avoid floating-point
	arithmetics; add a comment.

2011-04-23  Ivan Maidanski  <ivmai@mail.ru>

	* mark.c (GC_clear_hdr_marks): Don't test USE_MARK_BYTES.
	* extra/setjmp_t.c (main): Don't test USE_MARK_BITS.
	* include/private/gc_pmark.h (SET_MARK_BIT_EXIT_IF_SET): Ditto.
	* include/private/gc_pmark.h (SET_MARK_BIT_EXIT_IF_SET): Remove
	"mark_byte" local variable.
	* include/private/gc_pmark.h (OR_WORD_EXIT_IF_SET): Add a comment
	about that AO_or() is not used by GC unless USE_MARK_BITS
	explicitly set.
	* include/private/gc_priv.h (OR_WORD): Ditto.
	* include/private/gc_pmark.h (INCR_MARKS): Remove trailing ';',
	add parentheses.
	* include/private/gc_priv.h (ONES): Define before use by
	MAKE_COOLER.
	* include/private/gc_priv.h (MARK_BITS_SZ): Define where used.
	* include/private/gc_priv.h (OR_WORD): Don't define if
	USE_MARK_BYTES.
	* include/private/gcconfig.h (USE_MARK_BYTES); Remove duplicate
	definition; simplify expression.

2011-04-22  Ivan Maidanski  <ivmai@mail.ru>

	* os_dep.c (GC_get_maps): Always close the file.
	* pthread_support.c (GC_get_nprocs): Ditto.
	* os_dep.c (READ): Define similarly across the file (without
	parameters).
	* pthread_support.c (GC_get_nprocs): Use signed int type for "i"
	and "len" local variables (since read() may return -1).
	* include/private/gc_pmark.h (LONG_MULT): Add prefix/suffix
	double underscore; add "volatile" for asm.
	* include/private/gc_pmark.h (LONG_MULT): Add missing
	parentheses.
	* include/private/gc_priv.h (OR_WORD): Ditto.
	* include/private/gc_priv.h (OR_WORD): Remove unnecessary brackets